Started work on localization

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@ hs_err_pid*
 # IntelliJ files
 .idea/
 *.iml
+/bin/
+
+# Eclipse files
+
+*.classpath
+.metadata/
+*.project
+.settings/
+build/
+META-INF/
+*.MF
